생성 스크립트에 user_table에 선호/비선호 식재료 추가

--- a/SQL 테이블 생성 스크립트.ipynb
+++ b/SQL 테이블 생성 스크립트.ipynb
@@ -94,6 +94,8 @@
     "    is_vegan BOOLEAN,\n",
     "    preferred_cuisine VARCHAR(50),\n",
     "    non_preferred_cuisine VARCHAR(50)\n",
+    "    preferred_ingredient VARCHAR(50),\n",
+    "    non_preferred_ingredient VARCHAR(50)\n",
     ");\n",
     "\n",
     "-- 10. User Preferences Table\n",
