--- a/SQL 테이블 생성 스크립트.ipynb
+++ b/SQL 테이블 생성 스크립트.ipynb
@@ -7,13 +7,13 @@
    "outputs": [],
    "source": [
     "-- 1. Allergy Table\n",
-    "CREATE TABLE allergy_table (\n",
+    "CREATE TABLE allergy (\n",
     "    allergy_id INT PRIMARY KEY,\n",
     "    allergy_name VARCHAR(255)\n",
     ");\n",
     "\n",
     "-- 2. Food Table\n",
-    "CREATE TABLE food_table (\n",
+    "CREATE TABLE food (\n",
     "    food_id INT PRIMARY KEY,\n",
     "    food_name VARCHAR(255),\n",
     "    storage_method VARCHAR(50),\n",
@@ -23,7 +23,7 @@
     ");\n",
     "\n",
     "-- 3. Fridge Contents Table\n",
-    "CREATE TABLE fridge_contents_table (\n",
+    "CREATE TABLE fridge_contents (\n",
     "    user_id INT,\n",
     "    food_id INT,\n",
     "    quantity INT,\n",
@@ -34,7 +34,7 @@
     ");\n",
     "\n",
     "-- 4. Product Table\n",
-    "CREATE TABLE product_table (\n",
+    "CREATE TABLE product (\n",
     "    product_id INT PRIMARY KEY,\n",
     "    product_name VARCHAR(255),\n",
     "    price DECIMAL(10, 2),\n",
@@ -44,7 +44,7 @@
     ");\n",
     "\n",
     "-- 5. Recipe Ingredients Table\n",
-    "CREATE TABLE recipe_ingredients_table (\n",
+    "CREATE TABLE recipe_ingredients (\n",
     "    recipe_ingredients_id INT PRIMARY KEY,\n",
     "    recipe_id INT,\n",
     "    food_id INT,\n",
@@ -54,7 +54,7 @@
     ");\n",
     "\n",
     "-- 6. Recipes Table\n",
-    "CREATE TABLE recipes_table (\n",
+    "CREATE TABLE recipes (\n",
     "    recipe_id INT PRIMARY KEY,\n",
     "    recipe_name VARCHAR(255),\n",
     "    cuisine_type VARCHAR(50),\n",
@@ -64,7 +64,7 @@
     ");\n",
     "\n",
     "-- 7. Shopping Lists Table\n",
-    "CREATE TABLE shopping_lists_table (\n",
+    "CREATE TABLE shopping_lists (\n",
     "    shopping_list_id INT PRIMARY KEY,\n",
     "    user_id INT,\n",
     "    food_id INT,\n",
@@ -74,7 +74,7 @@
     ");\n",
     "\n",
     "-- 8. User Allergies Table\n",
-    "CREATE TABLE user_allergies_table (\n",
+    "CREATE TABLE user_allergies (\n",
     "    user_id INT,\n",
     "    allergy_id INT,\n",
     "    PRIMARY KEY (user_id, allergy_id),\n",
@@ -83,7 +83,7 @@
     ");\n",
     "\n",
     "-- 9. User Data Table\n",
-    "CREATE TABLE user_data_table (\n",
+    "CREATE TABLE user (\n",
     "    user_id INT PRIMARY KEY,\n",
     "    user_name VARCHAR(255),\n",
     "    email VARCHAR(255),\n",
@@ -99,7 +99,7 @@
     ");\n",
     "\n",
     "-- 10. User Preferences Table\n",
-    "CREATE TABLE user_preferences_table (\n",
+    "CREATE TABLE user_preferences (\n",
     "    user_preference_id INT PRIMARY KEY,\n",
     "    user_id INT,\n",
     "    recipe_id INT,\n",
