--- a/SQL 테이블 생성 스크립트.ipynb
+++ b/SQL 테이블 생성 스크립트.ipynb
@@ -88,7 +88,7 @@
     "    user_name VARCHAR(255),\n",
     "    email VARCHAR(255),\n",
     "    password VARCHAR(255),\n",
-    "    is_family_head BOOLEAN,\n",
+    "    is_family_exist BOOLEAN,\n",
     "    gender VARCHAR(10),\n",
     "    age_group VARCHAR(20),\n",
     "    is_vegan BOOLEAN,\n",
