--- a/SQL 테이블 생성 스크립트.ipynb
+++ b/SQL 테이블 생성 스크립트.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "-- 3. Fridge Contents Table\n",
     "CREATE TABLE Fridge_contents (\n",
-    "    user_id INT,\n",
+    "    member_id INT,\n",
     "    food_id INT,\n",
     "    quantity INT,\n",
     "    purchase_date DATE,\n",
@@ -74,8 +74,8 @@
     ");\n",
     "\n",
     "-- 8. User Allergies Table\n",
-    "CREATE TABLE User_allergies (\n",
-    "    user_id INT,\n",
+    "CREATE TABLE Member_allergies (\n",
+    "    member_id INT,\n",
     "    allergy_id INT,\n",
     "    PRIMARY KEY (user_id, allergy_id),\n",
     "    FOREIGN KEY (user_id) REFERENCES user_data_table(user_id),\n",
@@ -83,9 +83,9 @@
     ");\n",
     "\n",
     "-- 9. User Data Table\n",
-    "CREATE TABLE User (\n",
-    "    user_id INT PRIMARY KEY,\n",
-    "    user_name VARCHAR(255),\n",
+    "CREATE TABLE Member (\n",
+    "    member_id INT PRIMARY KEY,\n",
+    "    member_name VARCHAR(255),\n",
     "    email VARCHAR(255),\n",
     "    password VARCHAR(255),\n",
     "    is_family_exist BOOLEAN,\n",
@@ -99,9 +99,9 @@
     ");\n",
     "\n",
     "-- 10. User Preferences Table\n",
-    "CREATE TABLE user_preferences (\n",
-    "    user_preference_id INT PRIMARY KEY,\n",
-    "    user_id INT,\n",
+    "CREATE TABLE Member_preferences (\n",
+    "    member_preference_id INT PRIMARY KEY,\n",
+    "    member_id INT,\n",
     "    recipe_id INT,\n",
     "    preference_level INT,\n",
     "    liked BOOLEAN,\n",
